# fireup

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  flake.nix  install.sh
.fluentci/src/: jobs.ts  lib.ts
.github/workflows/: ci.yml  release.yml
.tangled/workflows/: fmt.yml
crates/fire-client/: Cargo.toml
crates/fire-config/: Cargo.toml
crates/fire-config/src/: lib.rs
crates/fire-server/: Cargo.toml
crates/fire-server/src/: lib.rs  server.rs
crates/fire-server/src/api/: microvm.rs  mod.rs
crates/fire-server/src/handlers/: mod.rs
crates/fire-server/src/services/: microvm.rs
crates/fire-server/src/types/: microvm.rs
crates/firecracker-prepare/: Cargo.toml
crates/firecracker-prepare/src/: command.rs  config.rs  downloader.rs  lib.rs  rootfs.rs  ssh.rs  vmlinuz.rs
crates/firecracker-prepare/src/config/: resolved.conf
crates/firecracker-prepare/src/scripts/: overlay-init.sh
crates/firecracker-process/: Cargo.toml
crates/firecracker-process/src/: command.rs  lib.rs
crates/firecracker-state/: Cargo.toml
crates/firecracker-state/migrations/: 20250804092946_init.sql  20250910164344_ip_address.sql  20250910202353_add_vmlinux_rootfs_bootargs.sql  20250911084132_ensure_unique_columns.sql  20250917153615_add_ssh_keys.sql  20250919184944_add_drives.sql
crates/firecracker-state/src/: lib.rs
crates/firecracker-state/src/entity/: drive.rs  virtual_machine.rs
crates/firecracker-state/src/repo/: drive.rs  mod.rs  virtual_machine.rs
crates/firecracker-up/: Cargo.toml
crates/firecracker-up/src/: command.rs  date.rs  main.rs  ssh.rs
crates/firecracker-up/src/cmd/: cp.rs  down.rs  drive.rs  exec.rs  init.rs  inspect.rs  logs.rs  mod.rs  ps.rs  reset.rs  rm.rs  serve.rs  ssh.rs  start.rs  status.rs  stop.rs  up.rs
crates/firecracker-vm/: Cargo.toml
crates/firecracker-vm/src/: command.rs  constants.rs  coredns.rs  dhcpd.rs  dnsmasq.rs  firecracker.rs  guest.rs  lib.rs  mac.rs  mosquitto.rs  mqttc.rs  network.rs  nextdhcp.rs  tailscale.rs  types.rs
crates/firecracker-vm/src/apparmor/: usr.sbin.kea-dhcp4
crates/firecracker-vm/src/coredns/: Corefile
crates/firecracker-vm/src/scripts/: kea-mqtt-hook.sh
crates/firecracker-vm/src/systemd/: coredns.service  nextdhcp.service
