[package]
name = "fire-config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_yml = "0.0.12"
toml = "0.9.4"
firecracker-prepare = { path = "../firecracker-prepare" }
num_cpus = "1.17.0"
anyhow = "1.0.98"
owo-colors = "4.2.2"
