[package]
name = "fire-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
env_logger = "0.11.8"
owo-colors = "4.2.2"
serde = { version = "1.0.225", features = ["serde_derive", "derive"] }
tokio-stream = "0.1.17"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web", "reqwest"] }
firecracker-state = { path = "../firecracker-state" }
firecracker-vm = { path = "../firecracker-vm" }
firecracker-prepare = { path = "../firecracker-prepare" }
firecracker-process = { path = "../firecracker-process" }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
  "derive",
  "macros",
] }
names = "0.14.0"
