[package]
name = "firecracker-prepare"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
libc = "0.2.174"
owo-colors = "4.2.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
sha2 = "0.10.9"
