[package]
name = "firecracker-state"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
names = "0.14.0"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
  "derive",
  "macros",
] }
tokio = { version = "1.47.1", features = ["full"] }
xid = "1.1.1"
