[package]
name = "fireup"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
firecracker-vm = { path = "../firecracker-vm" }
firecracker-prepare = { path = "../firecracker-prepare" }
firecracker-process = { path = "../firecracker-process" }
fire-config = { path = "../fire-config" }
clap = "4.5.41"
owo-colors = "4.2.2"
glob = "0.3.2"
dirs = "6.0.0"
num_cpus = "1.17.0"
