[package]
name = "fireup"
version = "0.5.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
firecracker-vm = { path = "../firecracker-vm" }
firecracker-prepare = { path = "../firecracker-prepare" }
firecracker-process = { path = "../firecracker-process" }
firecracker-state = { path = "../firecracker-state" }
fire-config = { path = "../fire-config" }
clap = "4.5.41"
owo-colors = "4.2.2"
glob = "0.3.2"
dirs = "6.0.0"
num_cpus = "1.17.0"
tokio = { version = "1.47.1", features = ["full"] }
names = "0.14.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
  "derive",
  "macros",
] }
chrono = "0.4.42"
