[package]
name = "firecracker-vm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
firecracker-prepare = { path = "../firecracker-prepare" }
firecracker-state = { path = "../firecracker-state" }
fire-config = { path = "../fire-config" }
anyhow = "1.0.98"
dirs = "6.0.0"
glob = "0.3.2"
libc = "0.2.174"
num_cpus = "1.17.0"
owo-colors = "4.2.2"
serde_json = "1.0.141"
rand = "0.8"
names = "0.14.0"
